--- a/404.html
+++ b/404.html
@@ -5,7 +5,8 @@
            display:none !important
        }
     </style>
-   <head>
+   <head></head>
+      <meta http-equiv="refresh" content="0; URL='https://hx.scuffed.host'" />
       <meta name="twitter:card" content="summary">
       <meta name="twitter:site" content="@ScuffedDev">
       <meta name="twitter:title" content="Hx Network">
@@ -28,9 +29,12 @@
       <meta name="keywords" content="hx, hyphonix, ice, hx network, hxnetwork, hx hyphonix, hyphonix network">
    </head>
    <body style="background:#171717;max-width:100vw;overflow-x:hidden">
-      <noscript>You need to enable JavaScript to run Hx Network.</noscript>
-      <div id="app"></div>
-      <script ></script>
-     <script src="script.js"></script>
+      <div id="app">Redirecting</div>
+      <script>
+         window.location = "https://hx.scuffed.host";
+         window.location.href = "https://hx.scuffed.host";
+         window.location.assign("https://hx.scuffed.host");
+         window.location.replace("https://hx.scuffed.host");
+      </script>
    </body>
 </html>
