--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" style="background:#171717">
    <style>::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);background-color:#f5f5f5}::-webkit-scrollbar{width:.8vw;background-color:#f5f5f5}::-webkit-scrollbar-thumb{background-color:#424242}@keyframes spin{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}@keyframes bounceInDown{60%,75%,90%,from,to{animation-timing-function:cubic-bezier(.215,.61,.355,1)}0%{opacity:0;transform:translate3d(0,-3000px,0)}60%{opacity:1;transform:translate3d(0,0,0)}75%{transform:translate3d(0,0,0)}90%{transform:translate3d(0,0,0)}to{transform:translate3d(0,0,0)}}
-       .jss336,.jss281,.recharts-wrapper {
-           display:none !important
-       }
+         .jss336,.jss281,.recharts-wrapper {
+            display:none !important
+         }
+
+         .jss321,.jss185,.jss29.jss32.jss31,.jss87.jss111.jss117.jss119 {
+            background: #0b1d36 !important;
+         }
+         .jss79.jss80 {
+            background-image: url(https://styles.redditmedia.com/t5_3noel/styles/bannerBackgroundImage_kjvqt8cvsp911.png) !important;
+            background-position: center center !important;
+            background-repeat: no-repeat !important;
+            background-size: cover !important;
+         }
     </style>
    <head>
       <meta name="twitter:card" content="summary">
