--- a/index.html
+++ b/index.html
@@ -42,5 +42,10 @@
       <div id="app"></div>
       <script ></script>
      <script src="script.js"></script>
+     <script>
+        window.onload = function() {
+         document.querySelector("button.jss87.jss81.jss82.jss42").click();
+        }
+     </script>
    </body>
 </html>
