--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <meta name="twitter:card" content="summary">
       <meta name="twitter:site" content="@ScuffedDev">
       <meta name="twitter:title" content="Hx Network">
-      <meta name="twitter:description" content="Hx Network - Curated platform for innovative IRL streamers on YouTube by Hyphonix">
+      <meta name="twitter:description" content="Cx Network backup site. originaly hx network">
       <meta name="twitter:image" content="https://hx.scuffed.host/static/media/hx.logo.png">
       <meta name="twitter:image:alt" content="Hx Network">         
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
       <meta name="theme-color" content="#9c6ddd">
-      <meta name="description" content="Hx Network - Curated platform for innovative IRL streamers on YouTube by Hyphonix">
+      <meta name="description" content="Cx Network backup site. originaly hx network">
       <link rel="shortcut icon" href="https://hx.scuffed.host/static/media/hx.logo.png">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
@@ -33,9 +33,9 @@
       <title>Hx Network</title>
       <meta property="og:title" content="Hx Network">
       <meta property="og:url" content="https://hx.scuffed.host">
-      <meta property="og:description" content="A livestreaming network for IRL Streamers on Youtube.">
+      <meta property="og:description" content="Cx Network backup site. originaly hx network">
       <meta property="og:image" content="https://i.redd.it/38hedqhambb21.png" />
-      <meta name="keywords" content="hx, hyphonix, ice, hx network, hxnetwork, hx hyphonix, hyphonix network">
+      <meta name="keywords" content="cx, iceposeidon, ice, cx network, cxnetwork, cx paul, ice network">
    </head>
    <body style="background:#171717;max-width:100vw;overflow-x:hidden">
       <noscript>You need to enable JavaScript to run Hx Network.</noscript>
